--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h2>
   <strong>Name:</strong>
   <%= @product.name %>
-</p>
+</h2>
 
 <p>
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
+
+<!-- Using a partial to render reviews -->
+<!-- Rendering a collection of reviews (plural!) which is automatically looped through -->
+<%= render @product.reviews %>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
