Rendering partials for reviews and the user who the review belongs to

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,9 @@
 <!-- Singular review partial -->
-<h4>Review</h4>
-<p><%= review.body %></p>
-<p>Created at: <%= review.created_at %></p>
+<div class = "review">
+  <%= render review.user %>
+
+  <h4>Review</h4>
+  <p><%= review.body %></p>
+  <p><em>Created at: <%= review.created_at %></em></p>
+
+</div>
