--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,22 @@
-<p id="notice"><%= notice %></p>
+<!-- Rails 5 caching Digest (takes notice if this changes) -->
+<% cache @product do %>
 
-<h2>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</h2>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+  <h2>
+    <strong>Name:</strong>
+    <%= @product.name %>
+  </h2>
 
-<!-- Using a partial to render reviews -->
-<!-- Rendering a collection of reviews (plural!) which is automatically looped through -->
-<%= render @product.reviews %>
+  <p>
+    <strong>Description:</strong>
+    <%= @product.description %>
+  </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+  <!-- Rendering a collection of reviews (plural!) which is automatically looped through -->
+  <%= render @product.reviews %>
+
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+  <%= link_to 'Back', products_path %>
+
+<% end %>
